--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Projects1</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+    </div>
 </body>
 </html>
