--- a/index.html
+++ b/index.html
@@ -7,18 +7,54 @@
 </head>
 <body>
     <div class="container">
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
-        <div class="food"><img src="./images/profile.jpg" alt="image"></div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
+        <div class="food">
+            <img src="./images/profile.jpg" alt="image">
+            <h2>Picture</h2>
+        </div>
     </div>
 </body>
 </html>
