added grid property

--- a/index.html
+++ b/index.html
@@ -4,54 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects1</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <div class="container">
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
-        <div class="food">
+        <div class="image">
             <img src="./images/profile.jpg" alt="image">
             <h2>Picture</h2>
         </div>
